--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(termNote)
 include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 
-set(CMAKE_BUILD_TYPE Debug)
-
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 add_executable(termNote ${SOURCES})
+
+install(TARGETS termNote DESTINATION bin)
