Started using c++17 filesystem library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ project(termNote)
 include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 
+set(CMAKE_CXX_FLAGS "-std=c++17 -lstdc++fs")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 add_executable(termNote ${SOURCES})
-
+target_link_libraries(${PROJECT_NAME} stdc++fs)
 install(TARGETS termNote DESTINATION bin)
