--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ set(CMAKE_CXX_FLAGS "-std=c++17 -lstdc++fs")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 add_executable(termNote ${SOURCES})
 target_link_libraries(${PROJECT_NAME} stdc++fs)
-install(TARGETS termNote DESTINATION bin)
+
+#install(TARGETS termNote DESTINATION bin)
