--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 add_executable(termNote ${SOURCES})
 target_link_libraries(${PROJECT_NAME} stdc++fs)
 
-#install(TARGETS termNote DESTINATION bin)
+install(TARGETS termNote DESTINATION bin)
