Revert "Add noted, a notification daemon for termNote"
This reverts commit 64a9c1ed2a00b05555e416162c56cc9d562b9968.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,11 @@ cmake_minimum_required(VERSION 3.6)
 project(termNote)
 
 include_directories(include)
-
-find_package(PkgConfig)
-pkg_check_modules(LIBNOTIFY QUIET libnotify)
-
-set(COMMON "src/note.cpp")
-
-include_directories(${LIBNOTIFY_INCLUDE_DIRS})
-link_directories(${LIBNOTIFY_LIBRARY_DIRS})
-ADD_DEFINITIONS(${LIBNOTIFY_CFLAGS})
+file(GLOB SOURCES "src/*.cpp")
 
 set(CMAKE_CXX_FLAGS "-std=c++17")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-add_executable(termNote src/main.cpp ${COMMON})
-add_executable(noted src/noted.cpp ${COMMON})
+add_executable(termNote ${SOURCES})
 target_link_libraries(${PROJECT_NAME} stdc++fs)
-target_link_libraries(noted stdc++fs ${LIBNOTIFY_LIBRARIES})
 
-install(TARGETS termNote noted DESTINATION bin)
-
+install(TARGETS termNote DESTINATION bin)
