--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.12)
 project(termNote)
 
 include_directories(include)
@@ -6,14 +6,13 @@ include_directories(include)
 find_package(PkgConfig)
 pkg_check_modules(LIBNOTIFY QUIET libnotify)
 
-find_package(Catch2)
+set(COMMON 
+	
+ "src/termNote/NoteManager.cpp" "src/termNote/Note.cpp")
 
-set(COMMON "src/note.cpp")
-
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 add_executable(termNote src/main.cpp ${COMMON})
 target_link_libraries(${PROJECT_NAME} stdc++fs)
 install(TARGETS termNote DESTINATION bin)
