Add vcpkg & argparse as dependencies & implement simple arg parsing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.24)
+
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/ext/vcpkg/scripts/buildsystems/vcpkg.cmake CACHE STRING "")
+
 project(termNote
    VERSION 2.0.0
 )
+
 
 add_subdirectory(termNote)
