--- a/termNote/CMakeLists.txt
+++ b/termNote/CMakeLists.txt
@@ -12,3 +12,15 @@ add_executable(termNote
 target_link_libraries(termNote PRIVATE argparse::argparse)
 target_include_directories(termNote PRIVATE inc/)
 target_compile_features(termNote PRIVATE cxx_std_23)
+
+set(CPACK_PACKAGE_NAME "termNote")
+set(CPACK_PACKAGE_VENDOR "muxelplexer")
+set(CPACK_PACKAGE_CONTACT "muxelplexer <sebastian@muxel.dev>")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/muxelplexer/termnote")
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_SOURCE_DIR}/LICENSE)
+set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.md)
+set(CPACK_STRIP_FILES TRUE)
+set(CPACK_THREADS 0)
+
+install(TARGETS termNote)
+include(CPack)
