--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,8 +20,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: "Update Submodules"
-      run: git submodule init
+    - name: run-vcpkg
+      uses: lukka/run-vcpkg@v11.1
+
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
