--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,6 +22,10 @@ jobs:
 
     - name: run-vcpkg
       uses: lukka/run-vcpkg@v11.1
+      with:
+          # This is the default location of the directory containing vcpkg sources.
+          # Change it to the right location if needed.
+          vcpkgDirectory: '${{ github.workspace }}/ext/vcpkg'
 
 
     - name: Configure CMake
